# C-11_MyString

./: .gitignore  .travis.yml  1.txt  CMakeLists.txt  README.md  build.sh  kjin.txt
.travis/cmake/: CodeCoverage.cmake
include/MyString/: MyString.h
src/: CMakeLists.txt  main.cpp
src/MyString/: MyString.cpp
test/: CMakeLists.txt
test/MyString/: comparion_operators.cpp  copy_swap.cpp  create_string.cpp  utlilities_string.cpp
